assets/css/main.css
/* ... */
/* Mobile */

	@media screen and (max-width: 736px) {

		/* Basic */

			body, input, select, textarea {
				font-size: 11pt;
			}

			h2 {
				font-size: 1.75em;
				line-height: 1.35em;
				letter-spacing: -0.025em;
			}

			h3 {
				font-size: 1.5em;
			}

			h4 {
				font-size: 1em;
			}

		/* Section/Article */

			header.major {
				padding: 1em;
			}

				header.major h2, header.major p {
					padding-left: 0.5em;
					padding-right: 0.5em;
				}

		/* Box */

			.box {
				margin: 1em;
				overflow-x: hidden;
				padding: 2em 2em !important;
			}

				.box.features .features-row {
					border-top: 0;
					padding: 0;
				}

					.box.features .features-row section {
						border: 0;
						border-top: solid 1px #e5e5e5 !important;
						float: none;
						margin: 2em 0 0 0 !important;
						padding: 2em 0 0 0 !important;
						width: 100%;
					}

					.box.features .features-row:first-child section:first-child {
						border-top: 0 !important;
						margin-top: 0 !important;
						padding-top: 0 !important;
					}

				.box .image.featured {
					margin-left: -2em;
					width: calc(100% + 4em);
				}

					.box .image.featured:first-child {
						margin-bottom: 2em;
						margin-top: -2em;
					}

					.box .image.featured:last-child {
						margin-bottom: -2em;
						margin-top: 2em;
					}

		/* Banner */

			#banner {
				padding: 4em 0;
			}

				#banner h2 {
					font-size: 2.25em;
				}

				#banner p {
					font-size: 1.25em;
				}

		/* Main */

			#main {
				padding: 4em 0 0 0;
			}

				#main > header {
					margin: 0 2em 1.5em 2em;
				}

					#main > header h2 {
						font-size: 2em;
					}

					#main > header p {
						font-size: 1em;
						padding-bottom: 1em;
					}

			body.landing #main {
				padding: 0;
				margin-top: 0;
			}

		/* Footer */

			#footer {
				padding: 4em 0;
			}

				#footer .copyright li {
					border-left: 0;
					display: block;
					line-height: 2em;
					margin-left: 0;
					padding-left: 0;
				}

	}

/* Mobile (Portrait) */

	@media screen and (max-width: 480px) {

		/* Basic */

			html, body {
				min-width: 320px;
			}

			body, input, select, textarea {
				font-size: 11pt;
			}

		/* Section/Article */

			header.major {
				padding: 0;
			}

		/* List */

			ul.actions {
				margin: 0 0 2em 0;
			}

				ul.actions li {
					display: block;
					padding: 1em 0 0 0;
					text-align: center;
					width: 100%;
				}

					ul.actions li:first-child {
						padding-top: 0;
					}

					ul.actions li > * {
						width: 100%;
						margin: 0 !important;
					}

						ul.actions li > *.icon:before {
							margin-left: -2em;
						}

				ul.actions.small li {
					padding: 0.5em 0 0 0;
				}

					ul.actions.small li:first-child {
						padding-top: 0;
					}

		/* Box */

			.box {
				border-radius: 0;
				box-shadow: none;
				margin: 1em 0 0 0;
				padding: 3em 1em !important;
			}

				.box.features .features-row section {
					margin: 3em 0 0 0 !important;
					padding: 3em 0 0 0 !important;
				}

				.box .image.featured {
					border-radius: 0;
					margin-left: -1em;
					width: calc(100% + 2em);
				}

					.box .image.featured img {
						border-radius: 0 !important;
					}

					.box .image.featured:first-child {
						margin-bottom: 3em;
						margin-top: -3em;
					}

					.box .image.featured:last-child {
						margin-bottom: -3em;
						margin-top: 3em;
					}

		/* Banner */

			#banner {
				padding: 5em 3em 4em 3em;
			}

		/* Main */

			#main > .box:first-child {
				margin-top: 0;
			}

		/* CTA */

			#cta {
				padding: 2.5em 1em 3em 1em;
			}

	}

	
	/* General formatting */

		.box {
			background: #fff;
			border-radius: 6px;
			box-shadow: 0 2px 0 0 #e5e5e5;
			margin: 0 0 2em 0;
			padding: 3em;
		}

		.board {
			margin: 10em 0 0 0;
			max-width:100%;
		}

		.logo {
			height:3em;
			margin:0 0 0 0;
			/* width:40px; */
		}

		.indexBoard {
			height:11.5em;
			margin:0 0 10px 0;
		}

  	/* Boards Nav Menu */

		body {
			margin:0;
		}

		.container2 {
			display:flex;
			/* height:100vh; */
			padding:0 0 0 15vh;
		}

		/* sidebar */

			.sidebar {
				width:300px;
				/* height:100px; */
				background-color: #333;
				color: red;
				padding: 0;
				box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
			}

			.sidebar ul {
				list-style: none;
				margin: 0;
				padding: 0;
			}
			
			.sidebar ul li {
				margin: 0;
			}
			
			.sidebar ul li a {
				display: block;
				padding: 15px;
				color: white;
				text-decoration: none;
				transition: background 0.3s;
			}
			
			.sidebar ul li a:hover {
				background-color: #444;
			}
		
		/* Content styling */

			.content {
				flex: 1;
				padding: 20px;
				background-color: #f4f4f4;
			}

			.page {
				display: none;
			}

			.page.active {
				display: block;
			}

	/* Pictures */

	/* div 2 whole page 1 */
	

	/* div 3 row of pictures */

		.slide-container {
			/* padding: 1.5em 4em 0 4em; */
			display:flex;
			text-align:center;
			/* justify-content:space-around; */
			flex-wrap:wrap;
		}

	/* div 4 individual picture */

		.img_wrap {
			position:relative;
			width:17em;
			height:18em;
			padding:2em 0 0 0;
		}

	/* Popup */

		/* Style for modal background */
		
		.modal {
			display:none; /*Hidden by default*/
			position:fixed;
			top:0;
			left:0;
			width:100%;
			height:100%;
			background-color: rgba(0,0,0,0.5); /* semi-transparent background */
			z-index:1000;
			align-items:center;
			justify-content:center;
		}

		/* Style for modal content */

		.modalContent {
			background: white;
			padding: 20px;
			border-radius: 8px;
			max-width: 1000px;
			width: 80%;
			text-align: center;
		}

		 /* Close button */
		.close {
			position: absolute;
			top: 10px;
			right: 10px;
			font-size: 18px;
			font-weight: bold;
			color: #333;
			cursor: pointer;
		}	  

		   /* Style the image */
		.profilePicture {
			height:13em;
			cursor:pointer;
			width:12em;
			transition: transform 0.3s ease;
		}
/* ... */

